<resources>
    <string name="app_name">ibiliveSample</string>
    <string name="text_discover">Discover</string>
    <string name="text_Map">Map</string>
    <string name="text_MyPosts">My Posts</string>
    <string name="text_Requests">Requests</string>
    <string name="text_MyNetwork">My Network</string>
    <string name="text_search">Search a place</string>
    <string name="text_exploreparis">Explore Paris</string>
    <string name="location_paris">Paris</string>
    <string name="time">6d 2h left</string>
    <string name="reviews">222 Reviews</string>
    <string name="info">Lorem ipsum dolor sit amet, consectetur lorem ipsum
dolor sit amet, consectetur lorem ipsum.</string>

    <string name="name">Evelyn</string>
    <string name="connect">Connect</string>
    <string name="mode">mode</string>
    <string name="google_maps_api_key">AIzaSyBr3DtafTtcsHM-mC9IdrSz2A4k_yH9-bM</string>
</resources>
